# tune-tribe

./: .env.example  .gitignore  README.md  compose.yaml  package.json
.github/workflows/: ci.yml  dependency-review.yml  (+2 more)
backend/: .dockerignore  .env.example  Dockerfile  README.md  e2e-curl.sh  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260314_0001_initial_schema.py  20260314_0002_add_friendship_status.py  20260314_0003_add_track_metadata_cache.py  20260318_0004_add_activity_tracking.py
backend/app/: bootstrap.py  config.py  db.py  deps.py  http.py  main.py  models.py  schemas.py  security.py  validation.py
backend/app/services/: activity.py  analytics.py  api_cache.py  auth.py  metadata.py  rate_limit.py  seed.py  shared_cache.py
backend/app/services/track_metadata/: __init__.py  cache.py  domain.py  enrichment.py  http.py  parsers.py  service.py
backend/app/services/track_metadata/providers/: __init__.py  apple_music.py  base.py  open_graph.py  soundcloud.py  spotify.py  youtube.py
backend/tests/: test_activity_tracking.py  test_analytics.py  test_api_cache.py  test_api_security.py  test_auth_service.py  test_config.py  test_friend_lookup.py  test_metadata.py  test_rate_limit.py  test_schemas.py  test_security.py  test_track_metadata_service.py
backend/tunetribe_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .gitignore  Dockerfile  README.md  check_error.js  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: App.tsx  index.css
(+63 files in other folders)
